--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "animate.css": "^4.1.1",
     "axios": "^0.21.4",
     "core-js": "^3.6.5",
+    "echarts": "^5.2.1",
     "vue": "^2.6.11",
     "vue-router": "^3.5.2"
   },
